fix width overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,8 @@
     --font-melodrama: "Melodrama";
 }
 
+html,
 body {
+    overflow-x: hidden;
     font-family: "Raleway", sans-serif;
 }
